# ionEngine

./: .augurous.yml  .gitignore  .hgignore  .hgtags  .travis.yml  CMakeLists.txt  Clean.bash  Default.make  DefaultMakefile  Dockerfile  Doxyfile  GetConfiguration.sh  LICENSE.txt  LineCount.PS1  Makefile  NoGraphs  README.md  README.textile  RunTests.sh  SetConfiguration.sh  UpdateDependencies.bash  UpdateDependencies.sh  appveyor.yml  codeship-services.yml  codeship-steps.yml  gitpush.sh  glCalls.txt  glCallsUnique.txt  glCallsUniqueSorted.txt  ionAnimation.h  ionAsset.h  ionBootstrap.h  ionConfig.h  ionCore.h  ionDefaultBuild.props  ionDefaultTarget.props  ionDocs  ionEngine.h  ionEngine.props  ionEngine.sln  (+11 more)
Analytics/: Generate.sh
ContinuousIntegration/: BuildAndTest.bash  GitPush.bash  Install.sh  InstallGLFW.bash  Run.sh  Sync.sh  TravisCMakeWorkaround.sh  hgrc
Demo01-WindowManager/: CMakeLists.txt  Demo01-WindowManager.vcxproj  Demo01-WindowManager.vcxproj.filters  DemoWindowManager.cpp  DemoWindowManager.vcxproj
Demo02-GL/: CMakeLists.txt  Demo02-GL.vcxproj  DemoGL.cpp  DemoGL.vcxproj
Demo02-Graphics/: CMakeLists.txt  Demo02-Graphics.vcxproj  Demo02-Graphics.vcxproj.filters  DemoGraphics.cpp  Shader.hlsl
Demo03-Asset/: CMakeLists.txt  Demo03-Asset.vcxproj  DemoAsset.cpp  DemoAsset.vcxproj  Makefile
Demo03-Asset/Assets/Shaders/: FXAA.frag  FXAA.vert  Normals.frag  Normals.vert
Demo03-GUI/: CMakeLists.txt  Demo03-GUI.vcxproj  DemoGUI.cpp
Demo04-GUI/: CMakeLists.txt  Demo04-GUI.vcxproj  DemoGUI.cpp  DemoGUI.vcxproj
Demo04-Scene/: Axis.hlsl  Axis.vert  CMakeLists.txt  Demo04-Scene.vcxproj  Demo04-Scene.vcxproj.filters  DemoScene.cpp  Diffuse.frag  Diffuse.hlsl  Diffuse.vert
Demo05-Application/: CMakeLists.txt  Demo05-Application.vcxproj  Demo05-Application.vcxproj.filters  DemoApplication.cpp
Demo05-Application/Assets/Shaders/: Diffuse.frag  Diffuse.hlsl  Diffuse.vert  Simple.frag  Simple.hlsl  Simple.vert  SkyBox.frag  SkyBox.vert  SkySphere.frag  SkySphere.vert  Specular.frag  Specular.hlsl  Specular.vert
Demo05-Scene/: Demo05-Scene.vcxproj  DemoScene.cpp  DemoScene.vcxproj  Diffuse.vert
Demo06-Bootstrap/: Demo06-Bootstrap.vcxproj  Demo06-Bootstrap.vcxproj.filters  DemoBootstrap.cpp  DemoBootstrap.vcxproj
DemoAsset/: DemoAsset.cpp  DemoAsset.vcxproj  DemoAsset.vcxproj.filters
DemoBootstrap/: DemoBootstrap.cpp  DemoBootstrap.vcxproj
DemoDeployment/: DemoDeployment.vcxproj
DemoGL/: DemoGL.cpp  DemoGL.vcxproj  DemoGL.vcxproj.filters  Main.cpp
DemoGUI/: DemoGUI.cpp  DemoGUI.vcxproj  DemoGUI.vcxproj.filters  Main.cpp
DemoScene/: DemoScene.cpp  DemoScene.vcxproj
DemoWindowManager/: DemoWindowManager.vcxproj
Dependencies/: .gitignore  Clone.bash  Clone.bat
DeploymentTest/: CMakeLists.txt  DeploymentTest.cpp  DeploymentTest.vcxproj  Makefile
Documentation/: .gitignore  Dependencies.dox  Doxyfile  DoxygenLayout.xml  Generate.sh  Installation.dox  MainPage.dox  Makefile  ModuleCore.dox  ModuleGL.dox  Modules.dox  README.md  Readme.md  conf.py  dependencies.rst  extra.less  footer.html  header.html  index.rst  installation.rst  moduleCore.rst  moduleGL.rst  modules.rst
Include/: ionAnimation.h  ionApplication.h  ionAsset.h  ionBootstrap.h  ionConfig.h  ionCore.h  ionEngine.h  ionFramework.h  ionGL.h  ionGUI.h  ionGraphics.h  ionGraphicsD3D11.h  ionGraphicsGL.h  ionMath.h  ionScene.h  ionScience.h  ionWindow.h
Profiling/: Generate.sh
Properties/: Application.props  DefaultBuild.props  DefaultCompile.props  DefaultPaths.props  DefaultTarget.props  Demo.props  Deploy.props  FullApplication.props  FullTarget.props  Library.props  Utility.props  ionDefaultBuild.props  ionDefaultTarget.props  ionEngine.props  ionGLFW.props
TestAsset/: Main.cpp  TestAsset.vcxproj
TestBootstrap/: Diffuse.vert  Main.cpp  TestBootstrap.vcxproj
TestConfig/: CMakeLists.txt  ConfigTest.cpp
TestCore/: Makefile  TestCore.cpp  TestCore.vcxproj  TestCore.vcxproj.filters  ionClass.cpp  ionComparison.cpp
TestDeployment/: CMakeLists.txt  DeploymentTest.cpp  TestDeployment.vcxproj  TestDeployment.vcxproj.filters  glad.cpp
TestGL/: Main.cpp  TestGL.vcxproj
TestScene/: Main.cpp  TestScene.vcxproj
TestUnits/: CMakeLists.txt  Interpolation.cpp  IsUniformNameArrayElement.cpp  SBoundingBox3.cpp  SRect2.cpp  SVector2.cpp  SVector3.cpp  TestBitwise.cpp  TestColor.cpp  TestFile.cpp  TestString.cpp  TestUnits.vcxproj  TestUnits.vcxproj.filters  TestionUtils.cpp  UnitTests.cpp  ionBitwise.cpp  ionClass.cpp  ionComparison.cpp  ionComponent.cpp  ionContainer.cpp  ionLogger.cpp  ionMath.cpp  ionSmartPtr.cpp  ionStandardLibrary.cpp  ionUtils.cpp  line2.cpp  ray3.cpp  vec2.cpp  vec3.cpp  vec4.cpp
TestWindowManager/: Main.cpp  TestWindowManager.vcxproj
UnitTests/: Interpolation.cpp  Makefile  SBoundingBox3.cpp  SRect2.cpp  SVector2.cpp  SVector3.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters  ionClass.cpp  ionComponent.cpp  ionLogger.cpp  ionSmartPtr.cpp  ionStandardLibrary.cpp  ionUtils.cpp
UtilityCompileTest/: Build.cpp  UtilityCompileTest.vcxproj
ionAnimation/: CCatmullRomAdvancedInterpolator.h  CCatmullRomAdvancedSplineInterpolator.h  CCatmullRomInterpolator.h  CCatmullRomSplineInterpolator.h  CHermiteInterpolator.h  CHermiteSplineInterpolator.h  CKochanekBartelsInterpolator.h  CKochanekBartelsSplineInterpolator.h  CLinearInterpolator.h  CLinearSplineInterpolator.h  CMakeLists.txt  CPath.cpp  CPath.h  CSkinnedAnimation.h  CSpline.cpp  CSpline.h  IInterpolator.h  IPath.h  ISpline.h  ISplineInterpolator.h  Interpolators.h  Move.cpp  Move.h  SPathNode.h  (+4 more)
ionCore/: Bitwise.cpp  Bitwise.h  CImage.cpp  CImage.h  CMakeLists.txt  Color.cpp  Color.h  Directory.cpp  File.cpp  File.h  IEntity.h  IEvent.h  IEventListener.h  IMultiTreeNode.h  ITreeNode.h  Instantiate.h  Random.h  SBoundingBox3.h  SColor.cpp  SColor.h  SLine3.h  SPosition2.h  SRect2.h  SSize2.h  STransformation3.h  SVector.h  SVector2.h  SVector3.h  Singleton.h  SingletonPointer.h  String.cpp  String.h  color3.h  color4.h  ionBitwise.h  ionClass.h  ionComparison.h  ionComponent.h  ionConfig.h  ionConstants.h  (+23 more)
(+915 files in other folders)
