set(TARGET_NAME Demo04-Scene)
add_executable(${TARGET_NAME} DemoScene.cpp)

BuildProperties(${TARGET_NAME})
target_link_libraries(${TARGET_NAME} ionScene)
target_link_libraries(${TARGET_NAME} ionGraphicsGL)
target_link_libraries(${TARGET_NAME} ionGraphics)
target_link_libraries(${TARGET_NAME} ionWindow)
target_link_libraries(${TARGET_NAME} ionCore)
ExecutableProperties(${TARGET_NAME})
