set(TARGET_NAME Demo05-Application)
add_executable(${TARGET_NAME} DemoApplication.cpp)
BuildProperties(${TARGET_NAME})
ExecutableProperties(${TARGET_NAME})

target_link_libraries(${TARGET_NAME} ionApplication)
target_link_libraries(${TARGET_NAME} ionScene)
target_link_libraries(${TARGET_NAME} ionGraphicsGL)
target_link_libraries(${TARGET_NAME} ionGraphics)
target_link_libraries(${TARGET_NAME} ionWindow)
target_link_libraries(${TARGET_NAME} ionCore)
